# h4kslanding

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  compose.yaml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
interface/: db.sqlite3  manage.py
interface/h4kslanding/: asgi.py  settings.py  settings_clocks.py  urls.py  urls_clocks.py  wsgi.py
interface/webapp/: admin.py  apps.py  auth.py  context_processors.py  models.py  plans.py  urls.py  views.py
interface/webapp/migrations/: 0001_initial.py  0002_pendinguser_userprofile.py  0003_add_timezone_to_userprofile.py  0004_announcement_featuredproject_apitoken.py  0005_chatline_featuredproject_image.py  0006_remove_ssh_key.py  0007_featuredproject_github_url.py  0008_alter_app_color_alter_featuredproject_color_and_more.py
interface/webapp/templates/: admin_dashboard.html  base.html  clocks.html  index.html  login.html  profile.html  sign_up.html  signup.html  user_management.html
interface/webapp/templates/admin/: bulk_set.html
interface/webapp/templates/oidc_provider/: authorize.html
interface/webapp/templates/partials/: nav.html
