[project]
name = "h4kslanding"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "django==5.0.7",
    "django-oidc-provider==0.8.4",
    "mozilla-django-oidc>=4.0.0",
    "future==1.0.0",
    "gunicorn==22.0.0",
    "httpx>=0.27.0",
    "idna==3.10",
    "packaging==24.1",
    "pycryptodomex==3.23.0",
    "pyjwkest==1.4.2",
    "python-decouple==3.8",
    "python-dotenv==1.0.1",
    "six==1.17.0",
    "sqlparse==0.5.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "whitenoise==6.7.0",
    "pillow>=12.1.1",
]
